--- a/cmd/golden/different_workflow_names.yaml
+++ b/cmd/golden/different_workflow_names.yaml
@@ -5,20 +5,20 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: defaultWorkflow
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: workflowA
   workflow: workflowA
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: workflowB
   workflow: workflowB
