--- a/cmd/golden/mergeParentDependencies.yaml
+++ b/cmd/golden/mergeParentDependencies.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../parent/terragrunt.hcl
     - some_parent_dep
@@ -16,7 +16,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../parent/terragrunt.hcl
     - some_parent_dep
