--- a/cmd/golden/terragrunt_dependency.yaml
+++ b/cmd/golden/terragrunt_dependency.yaml
@@ -5,13 +5,13 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: dependency
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../dependency/terragrunt.hcl
   dir: depender
