--- a/cmd/golden/apply_overrides_flag.yaml
+++ b/cmd/golden/apply_overrides_flag.yaml
@@ -8,7 +8,7 @@ projects:
   autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: .
 version: 3
