--- a/cmd/golden/autoplan.yaml
+++ b/cmd/golden/autoplan.yaml
@@ -5,21 +5,21 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../terragrunt.hcl
   dir: autoplan_false
 - autoplan:
     enabled: true
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../terragrunt.hcl
   dir: autoplan_true
 - autoplan:
     enabled: true
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../terragrunt.hcl
   dir: set_in_parent
