--- a/cmd/golden/extra_dependencies.yaml
+++ b/cmd/golden/extra_dependencies.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - some_extra_dep
     - ../test_file.json
