--- a/cmd/golden/filterInfraLiveProd.yaml
+++ b/cmd/golden/filterInfraLiveProd.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../../../terragrunt.hcl
     - ../../../../_envcommon/mysql.hcl
@@ -16,7 +16,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../../../terragrunt.hcl
     - ../../../../_envcommon/webserver-cluster.hcl
