--- a/cmd/golden/filterInfraLiveProdAndNonProd.yaml
+++ b/cmd/golden/filterInfraLiveProdAndNonProd.yaml
@@ -5,7 +5,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/mysql.hcl
@@ -16,7 +16,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/webserver-cluster.hcl
@@ -27,7 +27,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/mysql.hcl
@@ -38,7 +38,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/webserver-cluster.hcl
@@ -49,7 +49,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/mysql.hcl
@@ -60,7 +60,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - "*.hcl"
+        - "terragrunt.hcl"
         - "*.tf*"
         - ../../../../terragrunt.hcl
         - ../../../../_envcommon/webserver-cluster.hcl
