--- a/cmd/golden/multi_accounts_vpc_route53_tgw.yaml
+++ b/cmd/golden/multi_accounts_vpc_route53_tgw.yaml
@@ -5,14 +5,14 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../../../terragrunt.hcl
   dir: network-account/eu-west-1/network/transit-gateway
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../../../../terragrunt.hcl
     - ../../../env-a/network/vpc/terragrunt.hcl
@@ -21,7 +21,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../../../../../terragrunt.hcl
     - ../../../../../network-account/eu-west-1/network/transit-gateway/terragrunt.hcl
