--- a/cmd/golden/multiple_includes.yaml
+++ b/cmd/golden/multiple_includes.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../use_terraform_12_parent.hcl
     - ../use_terraform_13_parent.hcl
@@ -14,7 +14,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../use_terraform_13_parent.hcl
     - ../use_terraform_12_parent.hcl
@@ -23,7 +23,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../use_terraform_12_parent.hcl
   dir: uses_terraform_12
@@ -31,7 +31,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../use_terraform_13_parent.hcl
   dir: uses_terraform_13
