--- a/cmd/golden/withExecutionOrderGroups.yaml
+++ b/cmd/golden/withExecutionOrderGroups.yaml
@@ -5,14 +5,14 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - '*.hcl'
+        - 'terragrunt.hcl'
         - '*.tf*'
     dir: dependency
     execution_order_group: 0
   - autoplan:
       enabled: false
       when_modified:
-        - '*.hcl'
+        - 'terragrunt.hcl'
         - '*.tf*'
         - ../dependency/terragrunt.hcl
     dir: depender
@@ -20,7 +20,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - '*.hcl'
+        - 'terragrunt.hcl'
         - '*.tf*'
         - ../../dependency/terragrunt.hcl
     dir: depender_on_depender/nested
@@ -28,7 +28,7 @@ projects:
   - autoplan:
       enabled: false
       when_modified:
-        - '*.hcl'
+        - 'terragrunt.hcl'
         - '*.tf*'
         - ../depender/terragrunt.hcl
         - ../dependency/terragrunt.hcl
