--- a/cmd/golden/withOriginalDir.yaml
+++ b/cmd/golden/withOriginalDir.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../terragrunt.hcl
     - ../common/terragrunt.hcl
@@ -14,7 +14,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
     - ../terragrunt.hcl
   dir: dependency
