--- a/cmd/golden/withWorkspace.yaml
+++ b/cmd/golden/withWorkspace.yaml
@@ -5,7 +5,7 @@ projects:
 - autoplan:
     enabled: false
     when_modified:
-    - '*.hcl'
+    - 'terragrunt.hcl'
     - '*.tf*'
   dir: .
   workspace: _
